--- a/Spacy NLP analysis.ipynb
+++ b/Spacy NLP analysis.ipynb
@@ -2579,7 +2579,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ea3ae0f2",
+   "id": "b71072cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2818,6 +2818,30 @@
     "    if ent.label_ == \"ORG\":\n",
     "        print(ent.text, ent.start_char, ent.end_char, ent.label_)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e3d38f4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "artificial True 36.499645 False\n",
+      "artificial True 36.499645 False\n",
+      "artificial True 36.499645 False\n",
+      "artificial True 36.499645 False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc:\n",
+    "  if token.text.startswith(\"artificial\"):\n",
+    "    print(token.text, token.has_vector, token.vector_norm, token.is_oov)\n",
+    "    "
    ]
   },
   {
